--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ require(badger)
 <!-- <img src="man/figures/bayesFPCA_logo.png" align="right" height="150"/> -->
 
 <!-- Run for the R CMD checks, run usethis::use_github_actions() to set up the pipeline, possibly modify the .yaml file and then: -->
-<!-- `r badge_github_actions("hruffieux/atlasqtl")` # TODO. not enabled yet, needs pre-install of GSL lib for windows -->
+<!-- `r badge_github_actions("hruffieux/bayesFPCA")` -->
 <!-- `r badge_travis("hruffieux/bayesFPCA")` -->
 `r badge_license("GPL v3", url = "https://www.gnu.org/licenses/gpl-3.0")`
 `r badge_devel("hruffieux/bayesFPCA", "blue")`
@@ -68,4 +68,4 @@ Authors and copyright are provided in [DESCRIPTION](DESCRIPTION).
 
 ## Issues
 
-To report an issue, please use the [atlasqtl issue tracker](https://github.com/hruffieux/bayesFPCA/issues) at github.com.
+To report an issue, please use the [bayesFPCA issue tracker](https://github.com/hruffieux/bayesFPCA/issues) at github.com.
