--- a/README.Rmd
+++ b/README.Rmd
@@ -38,11 +38,16 @@ require(badger)
 
 ## Overview
 
-**bayesFPCA** is an R package providing tools for functional principal component
-analysis (FPCA) in the Bayesian setting. It implements variational message
-passing inference for univariate and multivariate FPCA, as well as functional
-linear regression.
+**bayesFPCA** is an R package providing tools for univariate and multivariate 
+functional principal component analysis (FPCA) in the Bayesian setting. It 
+provides efficient variational inference implementations (mean-field and 
+variational message passing).
 
+## Warning
+
+**This is a development branch - NOT FOR PUBLIC USE**. Please use the master 
+branch instead, or the devel branch if you want to test and report issues on 
+recent developments.
 
 ## Installation
 
@@ -52,6 +57,15 @@ Then, to install the package in R, run the following command:
 if(!require(remotes)) install.packages("remotes")
 remotes::install_github("hruffieux/bayesFPCA")
 ```
+
+## Main functions
+
+The two main functions to perform univariate and multivariate FPCA inference are
+`run_mfvb_fpca()` for the mean-field variational Bayes implementation and 
+`run_vmp_fpca()` for the variational message passing implementation.
+
+The package also provides a number of functions to generate and display 
+functional data as well as the resulting FPCA estimates.
 
 ## License and authors
 
