--- a/README.Rmd
+++ b/README.Rmd
@@ -26,8 +26,7 @@ require(badger)
 ```
 
 
-## bayesFPCA - Bayesian Functional Principal Component Analysis Suite
-<!-- <img src="man/figures/bayesFPCA_logo.png" align="right" height="150"/> -->
+## bayesFPCA - Bayesian Functional Principal Component Analysis Suite <img src="man/figures/bayesFPCA_logo.png" align="right" height="150"/>
 
 <!-- Run for the R CMD checks, run usethis::use_github_actions() to set up the pipeline, possibly modify the .yaml file and then: -->
 <!-- `r badge_github_actions("hruffieux/bayesFPCA")` -->
