--- a/README.Rmd
+++ b/README.Rmd
@@ -42,6 +42,12 @@ functional principal component analysis (FPCA) in the Bayesian setting. It
 provides efficient variational inference implementations (mean-field and 
 variational message passing).
 
+## Warning
+
+**This is a development branch**, it is not guaranteed to be stable at
+any given time and features are subject to change. Please use the
+[stable version](https://github.com/hruffieux/bayesFPCA), unless you want
+to test and report issues.
 
 ## Installation
 
@@ -49,7 +55,7 @@ Then, to install the package in R, run the following command:
 
 ``` r
 if(!require(remotes)) install.packages("remotes")
-remotes::install_github("hruffieux/bayesFPCA")
+remotes::install_github("hruffieux/bayesFPCA", ref = "devel")
 ```
 
 ## Main functions
